--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   db:
     image: postgres:latest
-    restart: unless-stopped
+    restart: no
     volumes:
       - postgres-data:/var/lib/postgresql/data
     environment:
@@ -11,6 +11,18 @@ services:
       POSTGRES_USER: postgres
     ports:
       - "5433:5432"
+
+  redis:
+    image: redis:latest
+    restart: no
+    volumes:
+      - ./redisdata:/data
+    env_file:
+      - .env
+    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+    ports:
+      - "6379:6379"
+
 
 volumes:
   postgres-data:
